--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,4 +1,4 @@
-<h1><%= @restaurant.title %></h1>
+<h1><%= @restaurant.name %></h1>
 <h4><%= @restaurant.rank %></h4>
 <h4><%= @restaurant.like %></h4>
 <p><%= @restaurant.comments %></p>
