--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Restaurant</h1>
-<%= form_for @Restaurant do |f| %>
+<%= form_for @restaurant do |f| %>
     <%= f.label :name %>
     <%= f.text_field :name %>
     
